config_k8s/anna/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anna
  namespace: anna
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - anna.oostrandpark.com
      secretName: anna-tls
  rules:
    - host: anna.oostrandpark.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anna
                port:
                  number: 80
